diy-base/main/default/objects/Contact/fields/AverageSpend__c.field-meta.xml
<CustomField>
    <fullName>AverageSpend__c</fullName>
    <label>AverageSpend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>