diy-base/main/default/objects/Contact/fields/Customer_BrandAffinity__c.field-meta.xml
<CustomField>
    <fullName>Customer_BrandAffinity__c</fullName>
    <label>Customer BrandAffinity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>