diy-base/main/default/objects/Contact/fields/Customer_IsWorkshopSpacePresent__c.field-meta.xml
<CustomField>
    <fullName>Customer_IsWorkshopSpacePresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer IsWorkshopSpacePresent</label>
    <type>Checkbox</type>
</CustomField>