diy-base/main/default/objects/Contact/fields/Customer_OwnershipStatus__c.field-meta.xml
<CustomField>
    <fullName>Customer_OwnershipStatus__c</fullName>
    <label>Customer OwnershipStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>