diy-base/main/default/objects/Contact/fields/Customer_ResidenceType__c.field-meta.xml
<CustomField>
    <fullName>Customer_ResidenceType__c</fullName>
    <label>Customer ResidenceType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>