diy-base/main/default/objects/Contact/fields/Customer_Seasonality__c.field-meta.xml
<CustomField>
    <fullName>Customer_Seasonality__c</fullName>
    <label>Customer Seasonality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>