diy-base/main/default/objects/Contact/fields/Customer_SkillLevel__c.field-meta.xml
<CustomField>
    <fullName>Customer_SkillLevel__c</fullName>
    <label>Customer SkillLevel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>