diy-base/main/default/objects/Contact/fields/Customer_Unified_Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unified_Individual_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Unified Individual Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>