diy-base/main/default/objects/Contact/fields/Customer_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>Customer_VehicleType__c</fullName>
    <label>Customer VehicleType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>