diy-base/main/default/objects/Contact/fields/isDIYRecord__c.field-meta.xml
<CustomField>
    <fullName>isDIYRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDIYRecord</label>
    <type>Checkbox</type>
</CustomField>