diy-base/main/default/objects/Contact/fields/IsWorkshopSpacePresent__c.field-meta.xml
<CustomField>
    <fullName>IsWorkshopSpacePresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWorkshopSpacePresent</label>
    <type>Checkbox</type>
</CustomField>