diy-base/main/default/objects/Contact/fields/Loyalty_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Membership_Number__c</fullName>
    <label>Loyalty Membership Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>