diy-base/main/default/objects/Contact/fields/OwnershipStatus__c.field-meta.xml
<CustomField>
    <fullName>OwnershipStatus__c</fullName>
    <label>OwnershipStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HomeOwner</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>