diy-base/main/default/objects/Contact/fields/ProjectFrequency__c.field-meta.xml
<CustomField>
    <fullName>ProjectFrequency__c</fullName>
    <label>ProjectFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Every Five Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>