diy-base/main/default/objects/Contact/fields/PurchaseFrequency__c.field-meta.xml
<CustomField>
    <fullName>PurchaseFrequency__c</fullName>
    <label>PurchaseFrequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frequent Buyer</fullName>
            </value>
            <value>
                <fullName>Seasonal Buyer</fullName>
            </value>
            <value>
                <fullName>Deal‑Driven Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>