diy-base/main/default/objects/Contact/fields/ResidenceType__c.field-meta.xml
<CustomField>
    <fullName>ResidenceType__c</fullName>
    <label>ResidenceType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
            <value>
                <fullName>Rural Home</fullName>
            </value>
            <value>
                <fullName>Suburban Home</fullName>
            </value>
            <value>
                <fullName>Urban Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>