diy-base/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>